# cathode

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/: main.py
src/cathode/: __init__.py
src/cathode/app/: cli.py  input.py  layout.py  main.py  pipeline.py
src/cathode/config/: settings.py
src/cathode/converters/: __init__.py  ascii.py  base.py  color_blocks.py
src/cathode/effects/: base.py  color_compress.py  rainbow.py
src/cathode/layouts/: effects_layout.py
src/cathode/styles/: cathode.css
