[project]
name = "cathode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wzgliniecki", email = "wojciech.zgliniecki@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
cathode = "cathode:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pre-commit>=4.6.0",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
]
